# anilist-toolbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
docker/: nginx.conf
graphql/: schema.json
graphql/mutations/: UpdateMedia.gql
graphql/queries/: AiringMedia.gql  Viewer.gql
src/: app.rs  components.rs  lib.rs  routes.rs
src/agents/: anilist.rs
src/agents/anilist/: airing_media.rs  update_media.rs  viewer.rs
src/components/: media.rs  nav.rs
src/routes/: airing.rs  auth.rs  home.rs
src/routes/auth/: logout.rs
src/utils/: duration.rs
static/: index.html  styles.scss
